# Thesis-FileStructureAnalysis

./: .gitignore  main.py  methodology.plantuml  pyproject.toml  run.sh  temp_remove_ignored.py
commit_analysis/: __init__.py  analyze_repo.py  convert_dataset.py  custom_analyze.py  find_branches.py  find_commits.py  main.py
commit_classification/: Simple_Transformers_Multi_Label.ipynb
data_analysis/: compute_stats.py
data_collection/: craw_pc.py  githubapi.py
datasets/: repo_cores.csv  top_10_languages.json
generate_tree/: test_tree.py
labs/: BigDatasetTesting-presplit.ipynb  BigDatasetTesting.ipynb  Code_RQ2.ipynb  GitHubDataOverview.ipynb  HorizVerticalGrowth.ipynb  INTRO_COMMIT_REASON4.xlsx  INTRO_COMMIT_REASON4_CORRECTIONS(AutoRecovered).xlsx  INTRO_COMMIT_REASON4_CORRECTIONS.xlsx  INTRO_COMMIT_REASON5(AutoRecovered).xlsx  INTRO_COMMIT_REASON5.xlsx  INTRO_COMMIT_REASON_UNCLASSIFIED.xlsx  ParquetClassInfo.ipynb  RepoInfoAnalysis.ipynb  Untitled.ipynb  analyse_projects.py  analyse_projects_globally.py  analyze_evolution.py  data.csv  depth_dec_unclassified.xlsx  depth_decrease_classified.xlsx  depth_intro_correction.xlsx  depth_intro_correction_classified(AutoRecovered).xlsx  depth_intro_correction_classified.xlsx  diff_with_classified.xlsx  exp_tmp_data.csv  exp_tmp_data_2.csv  exp_tmp_data_3.csv  exp_tmp_data_4.csv  exp_tmp_data_5.csv  file_depth_diff_outliers.csv  gusto_commits.csv  ignored_repo_ids.json  intro_commits.csv  intro_commits_1.xlsx  intro_commits_2.csv  intro_commits_2.xlsx  intro_commits_3.xlsx  large_moves.xlsx  max_depth_diff_99_pc.csv  (+10 more)
(+65 files in other folders)
